[gd_scene load_steps=11 format=3 uid="uid://cd7anw3qhpovq"]

[ext_resource type="Script" uid="uid://c3h5ekk41jdvq" path="res://Scripts/UI/Map/MapControl.gd" id="1_cpcl8"]
[ext_resource type="Texture2D" uid="uid://djl2ip3mf6pnd" path="res://Assets/Misc/oregon.jpg" id="2_ocftn"]
[ext_resource type="PackedScene" uid="uid://xum2e4iaos6e" path="res://Scenes/ui/controls/stats_box.tscn" id="2_r10et"]
[ext_resource type="PackedScene" uid="uid://dfdlj4k1uqvm2" path="res://Scenes/ui/controls/town_button_control.tscn" id="3_cpcl8"]
[ext_resource type="PackedScene" uid="uid://b7k75vt3n7uch" path="res://Scenes/ui/controls/badge.tscn" id="3_yp12h"]
[ext_resource type="Script" uid="uid://dhe534odp4ri1" path="res://Scripts/Misc/TownResource.gd" id="4_p5u53"]
[ext_resource type="PackedScene" uid="uid://c0etxlxqpnvgb" path="res://Scenes/ui/toplevel/loading_control.tscn" id="4_r10et"]

[sub_resource type="Resource" id="Resource_r10et"]
script = ExtResource("4_p5u53")
name = "Portland"
town_int = 0
population = 378
opening_hours = 5.0
metadata/_custom_type_script = "uid://dhe534odp4ri1"

[sub_resource type="Resource" id="Resource_p5u53"]
script = ExtResource("4_p5u53")
name = "Bend"
town_int = 1
population = 254
opening_hours = 3.0
metadata/_custom_type_script = "uid://dhe534odp4ri1"

[sub_resource type="Resource" id="Resource_xrc3u"]
script = ExtResource("4_p5u53")
name = "Manzanita"
town_int = 2
population = 457
opening_hours = 6.0
metadata/_custom_type_script = "uid://dhe534odp4ri1"

[node name="MapControl" type="Control" node_paths=PackedStringArray("map_buttons")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_cpcl8")
map_buttons = [NodePath("TextureRect/Town1"), NodePath("TextureRect/Town2"), NodePath("TextureRect/Town3")]
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ocftn")
expand_mode = 1
stretch_mode = 6

[node name="StatsBox" parent="TextureRect" instance=ExtResource("2_r10et")]
unique_name_in_owner = true
layout_mode = 1
offset_bottom = 39.0

[node name="SwitchSceneButton" parent="TextureRect/StatsBox/VBoxContainer" index="6"]
text = " Visit Store "
new_scene = "res://Scenes/mains/store_menu.tscn"

[node name="StoreAlertBadge" parent="TextureRect/StatsBox/VBoxContainer/SwitchSceneButton" index="0" instance=ExtResource("3_yp12h")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
text = "!"

[node name="CenterInfo" type="PanelContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -15.5
offset_right = 145.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/CenterInfo"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="TextureRect/CenterInfo/MarginContainer"]
layout_mode = 2
text = "Choose where to drive your food truck"

[node name="Town1" parent="TextureRect" instance=ExtResource("3_cpcl8")]
layout_mode = 0
offset_left = 345.6
offset_top = 97.2
offset_right = 425.6
offset_bottom = 126.2
town = SubResource("Resource_r10et")
position_fraction = Vector2(0.3, 0.15)

[node name="Town2" parent="TextureRect" instance=ExtResource("3_cpcl8")]
layout_mode = 0
offset_left = 806.4
offset_top = 259.2
offset_right = 869.4
offset_bottom = 288.2
town = SubResource("Resource_p5u53")
position_fraction = Vector2(0.7, 0.4)

[node name="Town3" parent="TextureRect" instance=ExtResource("3_cpcl8")]
layout_mode = 0
offset_left = 115.2
offset_top = 421.2
offset_right = 210.2
offset_bottom = 450.2
town = SubResource("Resource_xrc3u")
position_fraction = Vector2(0.1, 0.65)

[node name="LoadingControl" parent="." instance=ExtResource("4_r10et")]
visible = false
layout_mode = 1

[editable path="TextureRect/StatsBox"]
